--- a/HTML_code.html
+++ b/HTML_code.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html> 
 <html> 
 <head> 
-	<title>student calculate</title> 
+	<title>Student marks calculator</title> 
 	<!-- link for font -->
 	<link
 	href= 
 "https://fonts.googleapis.com/css?family=Righteous&display=swap"
 	rel="stylesheet"
 	/> 
-	<link rel="stylesheet" href="style.css" /> 
+	<link rel="stylesheet" href="Style.css" /> 
 </head> 
 <body> 
 	<!-- main html -->
 	<div class="container"> 
 	<h1>Student grade calculator</h1> 
-	<div class="screen-body-item"> 
+	<div class="flex-box"> 
 		<div class="app"> 
 		<div class="form-group"> 
 			<!-- option for taking the input -->
 			<input
 			type="text"
 			class="form-control"
-			placeholder="CHEMISTRY"
-			id="chemistry"
+			placeholder="TELUGU"
+			id="telugu"
 			/> 
 		</div> 
 		<div class="form-group"> 
@@ -33,6 +33,14 @@
 			id="hindi"
 			/> 
 		</div> 
+        <div class="form-group"> 
+			<input
+			type="text"
+			class="form-control"
+			placeholder="ENGLISH"
+			id="english"
+			/> 
+		</div>
 		<div class="form-group"> 
 			<input
 			type="text"
@@ -45,34 +53,34 @@
 			<input
 			type="text"
 			class="form-control"
-			placeholder="PHYSICS"
-			id="phy"
+			placeholder="GENARAL SCIENCE"
+			id="science"
 			/> 
 		</div> 
         <div class="form-group"> 
 			<input
 			type="text"
 			class="form-control"
-			placeholder="ENGLISH"
-			id="english"
+			placeholder="SOCIAL"
+			id="social"
 			/> 
 		</div>
-		<div> 
-			<input
-			type="button"
-			value="show Percentage"
-			class="form-button"
-			onclick="calculate()"
-			/> 
+        <div> 
+            <input
+            type="button"
+            value="calculate"
+            class="btn btn1"
+            onclick="calculate()"
+            /> 
+        </div> 
+        <!-- for showing the result-->
+        <div class="form-group showdata"> 
+            <p id="showdata"></p> 
+        </div> 
 		</div> 
-		</div> 
-	</div> 
-	<!-- for showing the result-->
-	<div class="form-group showdata"> 
-		<p id="showdata"></p> 
 	</div> 
 	</div> 
 	<!--adding external javascript file-->
-	<script src="script.js"></script> 
+	<script src="js_student_calculator.jsx"></script> 
 </body> 
 </html> 
